# practical-network-programming

./: .gitignore  README.md
asio_cpp/ch01/: CMakeLists.txt
boost_asio/: CMakeLists.txt  Connection.cpp  Connection.h  Connections.cpp  Connections.h  Server.h  connection_1.cpp  connection_2.cpp  connection_5.cpp
http_asio/: README  connection.cpp  connection.h  header.h  io_service_pool.cpp  io_service_pool.h  mime_types.cpp  mime_types.h  posix_main.cpp  reply.cpp  reply.h  request.h  request_handler.cpp  request_handler.h  request_parser.cpp  request_parser.h  server.cpp  server.h
muduo/examples/memcached/server/: MemcacheServer.cc  Session.cc  Session.h
muduo/muduo/base/: Singleton.h  StringPiece.h
pnp/: pnp.sln
pnp/muduo/: muduo.vcxproj  muduo.vcxproj.filters
pnp/recipes/: recipes.vcxproj  recipes.vcxproj.filters
pnp_pc/http_asio/: http_asio.vcxproj
pnp_pc/muduo/: muduo.vcxproj  muduo.vcxproj.filters
pnp_pc/recipes/: recipes.vcxproj  recipes.vcxproj.filters
pnp_t460/: pnp_t460.sln
pnp_t460/asio_cpp/: asio_cpp.vcxproj  asio_cpp.vcxproj.filters
pnp_t460/boost_asio/: boost_asio.vcxproj
pnp_t460/http_asio/: http_asio.vcxproj
pnp_t460/muduo/: muduo.vcxproj  muduo.vcxproj.filters
recipes/thread/: Atomic.h  Exception.cc  Exception.h  Makefile  SignalSlotTrivial.h  ThreadLocal.h  ThreadLocalSingleton.h
recipes/thread/test/: BlockingQueue_test.cc  SingletonThreadLocal_test.cc  ThreadLocalSingleton_test.cc
